// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge component renders 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-lkWDnA {
    justify-content: center;
    align-items: center;
    border-radius: var(--radii-0);
    min-width: 0;
    border: 1px solid #FFFFFF;
    font-family: var(--fonts-body);
  }

  .c-lkWDnA > *:not(:last-child) {
    margin-right: var(--space-1);
  }
}

@media  {
  .c-lkWDnA-eUcpXf-theme-info {
    background: var(--colors-primaryLight);
    color: var(--colors-primaryMid);
  }

  .c-lkWDnA-cOMlyh-size-sm {
    font-size: var(--fontSizes-md);
    padding-left: var(--space-1);
    padding-right: var(--space-1);
    height: var(--sizes-3);
  }
}

@media  {
  .c-PJLV-iguVXTk-css {
    white-space: nowrap;
    overflow-x: hidden;
    text-overflow: ellipsis;
    padding-top: var(--space-0);
    padding-bottom: var(--space-0);
  }
}

<div>
  <div
    class="c-dhzjXW c-lkWDnA c-lkWDnA-eUcpXf-theme-info c-lkWDnA-cOMlyh-size-sm"
    role="status"
  >
    <div
      class="c-PJLV c-PJLV-iguVXTk-css"
    >
      Some Text
    </div>
  </div>
</div>
`;

exports[`Badge component renders a md size and danger theme 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-lkWDnA {
    justify-content: center;
    align-items: center;
    border-radius: var(--radii-0);
    min-width: 0;
    border: 1px solid #FFFFFF;
    font-family: var(--fonts-body);
  }

  .c-lkWDnA > *:not(:last-child) {
    margin-right: var(--space-1);
  }
}

@media  {
  .c-lkWDnA-eUcpXf-theme-info {
    background: var(--colors-primaryLight);
    color: var(--colors-primaryMid);
  }

  .c-lkWDnA-cOMlyh-size-sm {
    font-size: var(--fontSizes-md);
    padding-left: var(--space-1);
    padding-right: var(--space-1);
    height: var(--sizes-3);
  }

  .c-lkWDnA-iZOjmP-theme-danger {
    background: var(--colors-dangerLight);
    color: var(--colors-dangerMid);
  }

  .c-lkWDnA-hQQbPV-size-md {
    font-size: var(--fontSizes-md);
    padding-left: var(--space-2);
    padding-right: var(--space-2);
    height: var(--sizes-4);
  }
}

@media  {
  .c-PJLV-iguVXTk-css {
    white-space: nowrap;
    overflow-x: hidden;
    text-overflow: ellipsis;
    padding-top: var(--space-0);
    padding-bottom: var(--space-0);
  }
}

<div>
  <div
    class="c-dhzjXW c-lkWDnA c-lkWDnA-iZOjmP-theme-danger c-lkWDnA-hQQbPV-size-md"
    role="status"
  >
    <div
      class="c-PJLV c-PJLV-iguVXTk-css"
    >
      Some Text
    </div>
  </div>
</div>
`;
